libs/@local/hashql/ast/tests/ui/lower/expander/type-call-not-constructor.jsonc
//@ run: fail
//@ description: calling a type intrinsic that is not a type constructor (Union/Intersection) should error
[
  "::kernel::special_form::type",
  "Foo",
  ["::kernel::type::List", "Integer"],
  //~^ ERROR `::kernel::type::List` is a type, not a type constructor
  { "#literal": 0 }
]
